adding keyword extraction notebook and modifying the README for accurate installation instruction.

--- a/keyword_extraction.ipynb
+++ b/keyword_extraction.ipynb
@@ -61,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -74,26 +76,6 @@
    "source": [
     "keywords = rake_object.run(text)\n",
     "print(\"keywords\", keywords)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<_io.TextIOWrapper name='cl_job.txt' mode='r' encoding='UTF-8'>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text = "
    ]
   },
   {
