modifying wordcloud to bigger size.

--- a/FB keyword extraction Kaggle/tag_extraction.ipynb
+++ b/FB keyword extraction Kaggle/tag_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,130 +23,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Took 515.7066731452942 seconds to load.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# load the data  - 6 ml data points, takes a while to read\n",
-    "start = t.time()\n",
-    "train = pd.read_csv(\"train.csv\")\n",
-    "print(\"Took {} seconds to load.\".format(t.time()-start))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Body</th>\n",
-       "      <th>Tags</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>How to check if an uploaded file is an image w...</td>\n",
-       "      <td>&lt;p&gt;I'd like to check if an uploaded file is an...</td>\n",
-       "      <td>php image-processing file-upload upload mime-t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>How can I prevent firefox from closing when I ...</td>\n",
-       "      <td>&lt;p&gt;In my favorite editor (vim), I regularly us...</td>\n",
-       "      <td>firefox</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>R Error Invalid type (list) for variable</td>\n",
-       "      <td>&lt;p&gt;I am import matlab file and construct a dat...</td>\n",
-       "      <td>r matlab machine-learning</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>How do I replace special characters in a URL?</td>\n",
-       "      <td>&lt;p&gt;This is probably very simple, but I simply ...</td>\n",
-       "      <td>c# url encoding</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>How to modify whois contact details?</td>\n",
-       "      <td>&lt;pre&gt;&lt;code&gt;function modify(.......)\\n{\\n  $mco...</td>\n",
-       "      <td>php api file-get-contents</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Id                                              Title  \\\n",
-       "0   1  How to check if an uploaded file is an image w...   \n",
-       "1   2  How can I prevent firefox from closing when I ...   \n",
-       "2   3           R Error Invalid type (list) for variable   \n",
-       "3   4      How do I replace special characters in a URL?   \n",
-       "4   5               How to modify whois contact details?   \n",
-       "\n",
-       "                                                Body  \\\n",
-       "0  <p>I'd like to check if an uploaded file is an...   \n",
-       "1  <p>In my favorite editor (vim), I regularly us...   \n",
-       "2  <p>I am import matlab file and construct a dat...   \n",
-       "3  <p>This is probably very simple, but I simply ...   \n",
-       "4  <pre><code>function modify(.......)\\n{\\n  $mco...   \n",
-       "\n",
-       "                                                Tags  \n",
-       "0  php image-processing file-upload upload mime-t...  \n",
-       "1                                            firefox  \n",
-       "2                          r matlab machine-learning  \n",
-       "3                                    c# url encoding  \n",
-       "4                          php api file-get-contents  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -154,108 +30,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6034195 entries, 0 to 6034194\n",
-      "Data columns (total 4 columns):\n",
-      "Id       int64\n",
-      "Title    object\n",
-      "Body     object\n",
-      "Tags     object\n",
-      "dtypes: int64(1), object(3)\n",
-      "memory usage: 184.1+ MB\n"
+      "Took 630.7031440734863 minutes to load.\n"
      ]
     }
    ],
+   "source": [
+    "# load the data  - 6 ml data points, takes a while to read\n",
+    "start = t.time()\n",
+    "train = pd.read_csv(\"train.csv\")\n",
+    "print(\"Took {} minutes to load.\".format(t.time()-start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "train.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "android                                                 49783\n",
-       "php                                                     30664\n",
-       "jquery                                                  28079\n",
-       "javascript                                              24995\n",
-       "javascript jquery                                       24955\n",
-       "java                                                    23751\n",
-       "c#                                                      22889\n",
-       "python                                                  16470\n",
-       "php mysql                                               15798\n",
-       "mysql                                                   15362\n",
-       "c++                                                     15328\n",
-       "html css                                                13296\n",
-       "iphone                                                  12552\n",
-       "asp.net                                                 11586\n",
-       "ruby-on-rails                                           10066\n",
-       "c# asp.net                                               9963\n",
-       "css                                                      8738\n",
-       "java android                                             8674\n",
-       "c                                                        8479\n",
-       "c# .net                                                  6082\n",
-       "iphone objective-c                                       5901\n",
-       "r                                                        5860\n",
-       "git                                                      5796\n",
-       "javascript html                                          5598\n",
-       "sql                                                      5140\n",
-       "objective-c                                              5107\n",
-       "javascript jquery html                                   5073\n",
-       "ruby                                                     4970\n",
-       "asp.net-mvc                                              4888\n",
-       "mysql sql                                                4768\n",
-       "                                                        ...  \n",
-       "restful-authentication asp.net-mvc-4 asp.net-web-api        1\n",
-       "osx-snow-leopard macports avr-gcc cunit                     1\n",
-       "python sql rows database                                    1\n",
-       "objective-c reflection decomposition                        1\n",
-       "iphone objective-c ipad objective-c-runtime                 1\n",
-       "linux unix memory memcached caching                         1\n",
-       "hex calculator                                              1\n",
-       "android google-maps maps google-maps-android-api-2          1\n",
-       "c# google gdata-api picasa                                  1\n",
-       "javascript html webforms formatting                         1\n",
-       "ajax chat bandwidth                                         1\n",
-       "java eclipse apache html5 spring-mvc                        1\n",
-       "iphone opengl-es colors ipad ios-simulator                  1\n",
-       "jquery iframe links href                                    1\n",
-       "jquery jquery-ui jquery-ui-sortable jquery-droppable        1\n",
-       "objective-c ipad cocos2d-iphone storekit appirater          1\n",
-       "html hyperlink svg                                          1\n",
-       "java jsf parameter-passing managed-bean                     1\n",
-       "asp.net jquery-ajax modal-dialog                            1\n",
-       "jquery ajax google-ad-manager                               1\n",
-       "python regex unicode python-3.3                             1\n",
-       "javascript text csv d3.js word-cloud                        1\n",
-       "interface resharper                                         1\n",
-       "spring mvc spring-mvc annotations                           1\n",
-       "iphone ios cocos2d box2d chipmunk                           1\n",
-       "php codeigniter sockets fgets fsockopen                     1\n",
-       "java mysql jdbc ipv6                                        1\n",
-       "jquery html calculator                                      1\n",
-       "java html mvc spring escaping                               1\n",
-       "jquery ajax http-headers xmlhttprequest jqxhr               1\n",
-       "Name: Tags, Length: 2110906, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train.Tags.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,104 +82,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 50000 entries, 779393 to 5431148\n",
-      "Data columns (total 4 columns):\n",
-      "Id       50000 non-null int64\n",
-      "Title    50000 non-null object\n",
-      "Body     50000 non-null object\n",
-      "Tags     50000 non-null object\n",
-      "dtypes: int64(1), object(3)\n",
-      "memory usage: 1.9+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_set.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "android                                          405\n",
-       "php                                              256\n",
-       "javascript jquery                                214\n",
-       "javascript                                       210\n",
-       "jquery                                           209\n",
-       "c#                                               193\n",
-       "java                                             192\n",
-       "python                                           157\n",
-       "c++                                              141\n",
-       "php mysql                                        132\n",
-       "html css                                         123\n",
-       "mysql                                            120\n",
-       "iphone                                            98\n",
-       "c# asp.net                                        86\n",
-       "css                                               80\n",
-       "asp.net                                           79\n",
-       "java android                                      78\n",
-       "ruby-on-rails                                     72\n",
-       "c                                                 71\n",
-       "iphone objective-c                                69\n",
-       "objective-c                                       53\n",
-       "mysql sql                                         52\n",
-       "git                                               47\n",
-       "r                                                 46\n",
-       "sql                                               45\n",
-       "javascript html                                   39\n",
-       "linux                                             39\n",
-       "ruby-on-rails ruby                                38\n",
-       "wordpress                                         37\n",
-       "javascript jquery html                            36\n",
-       "                                                ... \n",
-       ".net asp.net vb.net class webforms                 1\n",
-       "calculus approximation                             1\n",
-       "sql postgresql query-optimization                  1\n",
-       "java database-design java-ee dao                   1\n",
-       "command-line irc mirc                              1\n",
-       "php apache redirect                                1\n",
-       "php debugging xdebug                               1\n",
-       "conditional cython ifdef                           1\n",
-       "sql-server sql-server-express ssms                 1\n",
-       "asp.net url iis7                                   1\n",
-       "algebraic-geometry projective-space                1\n",
-       "named                                              1\n",
-       "c++ static extern linkage                          1\n",
-       "image-processing opencv photogrammetry             1\n",
-       "javascript database arrays object update           1\n",
-       "education math game-development                    1\n",
-       "asp.net-mvc database file-upload                   1\n",
-       "ruby-on-rails testing cucumber uploadify           1\n",
-       "c++ templates generics typedef typename            1\n",
-       "function postgresql session-variables plpgsql      1\n",
-       "mysql sql tsql select casting                      1\n",
-       "python list map zip                                1\n",
-       ".net gui scripting add-on                          1\n",
-       "android osx internet                               1\n",
-       "algorithm complexity turing-machines turing        1\n",
-       "javascript arrays merge                            1\n",
-       "entity-framework-4 lambda                          1\n",
-       "r urlencode url-encoding                           1\n",
-       "security configuration fail2ban                    1\n",
-       "linux security linux-kernel                        1\n",
-       "Name: Tags, Length: 38706, dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'train_set' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-d1159839df8d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_set\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTags\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_set' is not defined"
+     ]
     }
    ],
    "source": [
@@ -878,7 +619,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -924,7 +667,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -986,7 +731,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1006,7 +753,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
